--- a/src/App.css
+++ b/src/App.css
@@ -71,3 +71,17 @@ section li {
 label {
   display: block;
 }
+
+.pokemon-item {
+  /* width: 100px; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 10px;
+}
+
+.pokemon-item img{
+  width: 80px;
+}
