--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ section {
 
 .yelp {
   background-color: lightgreen;
+  height: 100%;
 }
 
 .weather {
@@ -62,6 +63,7 @@ section {
 
 .pokemon {
   background-color: pink;
+  height: 100%
 }
 
 section li {
@@ -89,4 +91,22 @@ label {
 
 .spinner img{
   width: 200px;
+}
+
+.yelp-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid black;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.yelp-item img {
+  width: 180px;
+}
+
+.yelp-item h3, p {
+  margin: 2px;
 }
