--- a/src/App.css
+++ b/src/App.css
@@ -110,3 +110,9 @@ label {
 .yelp-item h3, p {
   margin: 2px;
 }
+
+.weather-item {
+  border: solid 1px black;
+  border-radius: 20px;
+  margin: 20px;
+}
